Fixs main title too long

--- a/src/scss/components/directory-menu/filter-menu/_filter-menu.scss
+++ b/src/scss/components/directory-menu/filter-menu/_filter-menu.scss
@@ -173,6 +173,7 @@
 			line-height: 3rem;			
 			font-weight:bold;
 			text-align:center;	
+      overflow: hidden;
 
 			@media #{$small-only} { font-size: 1.2rem;}
 		}
